--- a/Platform/CMakeLists.txt
+++ b/Platform/CMakeLists.txt
@@ -15,7 +15,7 @@ if (WINDOWS_USE_EXTERNAL_LIBS)
     return()
 endif()
 
-set(PLATFORM_ROOT ${CMAKE_SOURCE_DIR}/Platform/${CMAKE_HOST_SYSTEM_NAME})
+set(PLATFORM_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/${CMAKE_HOST_SYSTEM_NAME})
 
 if(WIN32 AND NOT CMAKE_HOST_SYSTEM_NAME MATCHES Windows)
     # only provided for native builds
